--- a/terminal-noite.css
+++ b/terminal-noite.css
@@ -9,13 +9,16 @@ body {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Roboto Light", "Segoe UI Web Light", "Segoe UI Light", "Segoe UI Web Regular", "Segoe UI", Helvetica, Arial, sans-serif; 
     color: white;
     background-color: #f2f2f2;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
 }
 
 #iframecointa {
     height: 500px;
     width: 400px;
     width: auto;
-    margin-left: 100px;
+    margin-left: 50px;
     
     position: absolute;
     bottom: -100px;
@@ -30,6 +33,36 @@ body {
     
     color: white;
     
+}
+
+#enunciado {
+    height: 500px;
+    width: 400px;
+    width: auto;
+    right: 250px;
+    
+    position: absolute;
+    bottom: -100px;
+    overflow: hidden;
+}
+#desc {
+    width: 400px;
+    height: 600px;
+    margin-top: 100px;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: bold;
+    font-size: 12px;
+    
+    color: white;
+    
+}
+
+#logo {
+/*    position: absolute;*/
+    
+    height: 50vh;
+    margin: auto auto;    
+   
 }
 
 #timer {
@@ -163,7 +196,7 @@ button {
   overflow: hidden;
   white-space: nowrap;
     position: absolute;
-    margin-left: -480px;
+    margin-left: -500px;
     top: 50vh;
     z-index: 10;
     font-weight: bold;
@@ -206,7 +239,7 @@ button {
   overflow: hidden;
   white-space: nowrap;
     position: absolute;
-    right: -470px;;
+    right: -490px;;
     top: 50vh;
     z-index: 10;
     font-weight: bold;
