--- a/terminal-nowifi.css
+++ b/terminal-nowifi.css
@@ -8,13 +8,16 @@ body {
     padding: 0;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Roboto Light", "Segoe UI Web Light", "Segoe UI Light", "Segoe UI Web Regular", "Segoe UI", Helvetica, Arial, sans-serif; 
     color: white;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
 }
 
 #info {
     width: 700px;
     height: 300px;
     margin: 0 auto;
-    margin-top: 300px;
+    margin-top: 150px;
 
     display: block;
     align-self: center;
@@ -31,7 +34,7 @@ body {
     height: 500px;
     width: 400px;
     width: auto;
-    margin-left: 100px;
+    margin-left: 50px;
     
     position: absolute;
     bottom: -100px;
@@ -46,6 +49,36 @@ body {
     
     color: white;
     
+}
+
+#enunciado {
+    height: 500px;
+    width: 400px;
+    width: auto;
+    right: 250px;
+    
+    position: absolute;
+    bottom: -100px;
+    overflow: hidden;
+}
+#desc {
+    width: 400px;
+    height: 600px;
+    margin-top: 100px;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: bold;
+    font-size: 12px;
+    
+    color: white;
+    
+}
+
+#logo {
+/*    position: absolute;*/
+    
+    height: 50vh;
+    margin: auto auto;    
+   
 }
 
 #timer {
@@ -179,7 +212,7 @@ button {
   overflow: hidden;
   white-space: nowrap;
     position: absolute;
-    margin-left: -480px;
+    margin-left: -500px;
     top: 50vh;
     z-index: 10;
     font-weight: bold;
@@ -222,7 +255,7 @@ button {
   overflow: hidden;
   white-space: nowrap;
     position: absolute;
-    right: -470px;;
+    right: -490px;;
     top: 50vh;
     z-index: 10;
     font-weight: bold;
