--- a/terminal.css
+++ b/terminal.css
@@ -8,6 +8,9 @@ body {
     padding: 0;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Roboto Light", "Segoe UI Web Light", "Segoe UI Light", "Segoe UI Web Regular", "Segoe UI", Helvetica, Arial, sans-serif; 
     color: white;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
 }
 
 #iframecointa {
@@ -20,8 +23,6 @@ body {
     bottom: -100px;
     overflow: hidden;
 }
-
-
 #ifram {
     width: 500px;
     height: 600px;
@@ -30,6 +31,38 @@ body {
     color: white;
     
 }
+
+#enunciado {
+    height: 500px;
+    width: 400px;
+    width: auto;
+    right: 250px;
+    
+    position: absolute;
+    bottom: -100px;
+    overflow: hidden;
+}
+#desc {
+    width: 400px;
+    height: 600px;
+    margin-top: 30px;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: bold;
+    font-size: 12px;
+    
+    color: white;
+    
+}
+
+#logo {
+/*    position: absolute;*/
+    
+    height: 50vh;
+    margin: auto auto;    
+   
+}
+
+
 
 #timer {
     display: flex;
